# git-smart-commit

./: Cargo.toml  Makefile  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.sh
src/: app.rs  cli.rs  config.rs  error.rs  main.rs  state.rs
src/ai/: mod.rs  service.rs
src/git/: mod.rs  service.rs
