[package]
name = "git-sc"
version = "0.1.6"
edition = "2021"
description = "Smart commit message generator using Gemini CLI"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
regex = "1.11"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
rstest = "0.23"
pretty_assertions = "1.4"
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
